# treeffuser

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  NOTICE.rst  README-docs.md  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: documentation.yaml  documentation.yml  github-actions.yml
.tox/: .bumpversion.cfg  .cookiecutterrc  .coveragerc
ci/: bootstrap.py  requirements.txt
css/: pretty-buttons.css
dev_tools/: README.md  freeze_requirements.sh
docs/: .buildinfo  Gemfile  README.txt  conf.py  genindex.html  getting-started.html  index-hidden.html  index.html  installation.rst  modules.html  objects.inv  py-modindex.html  samples.html  search.html  searchindex.js  template.v1.js  template.v2.js  treeffuser.html  tutorials.html  usage.rst
docs/.doctrees/: environment.pickle  getting-started.doctree  index.doctree  modules.doctree  samples.doctree  treeffuser.doctree  tutorials.doctree
docs/_modules/: index.html
docs/_pages/: genindex.html  modules.html  treeffuser.html  treeffuser.sde.base_sde.html  treeffuser.sde.diffusion_sdes.html
docs/_posts/: 2024-06-23-welcome-to-jekyll.markdown  2024-06-24-welcome-to-jekyll.markdown
docs/_sources/: getting-started.rst.txt
docs/css/: base.css  code.css  example-cards.css  feature-table.css  flex-list.css  header.css  layout.css  pretty-buttons.css  tabs.css  title.css  treeffuser.css
docs/docs/: .buildinfo  Makefile  README.rst  clear_build.sh  genindex.html  getting-started.html  index.html  modules.html  objects.inv  py-modindex.html  release-notes.html  samples.html  search.html  searchindex.js  treeffuser.html  tutorials.html
docs/jekyll/: Gemfile  _config.yml
docs/jekyll-md/: _config.yml
docs/js/: figure1.js  flickity.js  tabs.js
docs/reference/: index.rst  treeffuser.rst
examples/: README_example.ipynb  README_example.py  m5-news-vendor-notebook.ipynb
notebooks/: README_example.py  debug.ipynb  diffusion_visualization.ipynb  simulations.ipynb
paper/: appendix.tex
site/: _config.yml
testbed/: Makefile  __init__.py  example.ipynb  metrics.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
tests/: test_likelihood.py  test_likelihood_gaussian.py  test_samples.py  test_sampling.py  test_score_models.py  test_tree.py  test_treeffuser.py  utils.py
(+349 files in other folders)
