[tool.poetry]
name = "treeffuser"
version = "0.1.1"
description = "Probabilistic predictions for tabular data, using diffusion models and decision trees."
authors = [
    "Nicolas Beltran-Velez <nb2838@columbia.edu>",
    "Alessandro Antonio Grande <alessandro.grande@columbia.edu>",
    "Achille Nazaret <achille.nazaret@gmail.com>",
]
license = "MIT"
readme = "README.rst"
packages = [{include = "treeffuser", from= "src"}]
repository = "https://github.com/blei-lab/treeffuser"
include = [
    "pyproject.toml",
    "AUTHORS.rst",
    "README.rst",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24"
jaxtyping = "^0.2.19"
einops = "^0.8.0"
scipy = "^1.13.1"
tqdm = "^4.66.4"
lightgbm = "^4.3.0"
ml-collections = "^0.1.1"
scikit-learn = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.per-file-ignores]
"ci/*" = ["S"]

[tool.ruff]
extend-exclude = ["static", "ci/templates", "testbed/notebooks/*", "testbed/*/_card_repo/*"]
ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101", # flake8-bandit assert
    "S308", # flake8-bandit suspicious-mark-safe-usage
    "E501", # pycodestyle line-too-long
    "F722", # Syntax error (issue with jaxtyping)
    "F821", # Issue with jax typing
    "PT006", # flake8-pytest-style fixture-final-use
]
line-length = 95
lint.select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I001", # isort
    "INT", # flake8-gettext
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint errors
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S", # flake8-bandit
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]
src = ["src", "tests"]
target-version = "py38"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
forced-separate = ["conftest"]
force-single-line = true

[tool.black]
line-length = 95
target-version = ["py38"]

[tool.ruff.format]
indent-style="space"

[tool.pytest.ini_options]
pythonpath = "src"
